--- a/Index.html
+++ b/Index.html
@@ -24,17 +24,17 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand title" href="/index.html"> <span class="fw-bolder> Dane</span>&nbsp; Whitman</a>
-        <div class=" collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html">Dane Whitman</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact</a>
-                        </li>
-                    </ul>
-        </div>
+            <a class="navbar-brand title" href="/index.html"> <span class="fw-bolder"> Dane</span>&nbsp;Whitman</a>
+            <div class=" collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!--Main Content Area-->
@@ -119,7 +119,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light sticky-footer">
         <div class="container-fluid text-center">
-            <span class="text-muted">Place sticky footer content here.</span>
+            <span class="text-muted">Copyright Dane Whitman</span>
         </div>
     </footer>
     <!-- Bootstrap JS -->
