--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Dane Whitman Personal Porfolio</title>
+    <title>Dane Whitman Full Stack Developer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,14 +24,19 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand title" href="/index.html"> <span class="fw-bolder"> Dane</span>&nbsp;Whitman</a>
-            <div class=" collapse navbar-collapse" id="navbarCollapse">
+            <a class="navbar-brand" href="/index.html">Dane Whitman</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact.html">Contact</a>
+                    </li>
                     </li>
                 </ul>
             </div>
